# python-sdk

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  README.md  README.rst  RELEASE.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml
docs/: Makefile
docs/source/: conf.py  index.rst  requirements.txt  transloadit.rst
examples/: README.md  assembly_with_template.py  async_image_resize.py  async_template_lifecycle.py  file_to_tts.py  image_resize.py  resumable_upload.py  smart_cdn_url.py  template_lifecycle.py  video_translator.py
examples/api2-devdock-assembly-lifecycle/: main.py
examples/api2-devdock-template-lifecycle/: main.py
examples/api2-devdock-tus-assembly/: main.py
examples/api2-devdock-tus-resume-upload/: main.py
examples/fixtures/: document.doc
scripts/: notify-registry.sh  test-in-docker.sh
tests/: __init__.py  helper.py  test_api_url.py  test_assembly.py  test_async_client.py  test_client.py  test_e2e_upload.py  test_examples.py  test_optionbuilder.py  test_request.py  test_response.py  test_signature_authentication.py  test_template.py
transloadit/: api_url.py  assembly.py  async_assembly.py  async_client.py  async_request.py  async_template.py  client.py  optionbuilder.py  request.py  response.py  smart_cdn.py  template.py  upload.py
