[tool.poetry]
name = "pytransloadit"
version = "1.0.2"
description = "A Python Integration for Transloadit's file uploading and encoding service."
authors = ["Ifedapo Olarewaju"]
maintainers = ["Florian Kuenzig", "Arnaud Limbourg"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/transloadit/python-sdk"
documentation = "https://transloadit.readthedocs.io"
classifiers=[
    "Programming Language :: Python",
    "Natural Language :: English",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: Communications :: File Sharing",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
packages = [
    { include = "transloadit" },
]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.30.0"
tuspy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mock = "^5.0.2"
coverage = "^7.2.5"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"
tox = "^4.7.0"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=transloadit --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["transloadit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
fail_under = 65
