[project]
name = "pytransloadit"
version = "2.0.0"
description = "A Python Integration for Transloadit's file uploading and encoding service."
authors = [{ name = "Ifedapo Olarewaju" }]
maintainers = [{ name = "Florian Kuenzig" }, { name = "Arnaud Limbourg" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: Communications :: File Sharing",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "aiohttp>=3.13.5,<4",
    "requests>=2.33,<3",
    "tuspy>=1.0.0,<2.0.0",
    "urllib3>=2.7,<3",
]

[project.urls]
Repository = "https://github.com/transloadit/python-sdk"
Documentation = "https://transloadit.readthedocs.io"

[tool.poetry]
packages = [
    { include = "transloadit" },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10"
mock = "^5.2.0"
coverage = "^7.14.0"
pytest-cov = "^7.1.0"
requests-mock = "^1.12.1"
tox = "^4.54.0"
sphinx = "^9.1.0"
sphinx-autobuild = "^2025.8.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=transloadit --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "e2e: marks tests that hit the live Transloadit API"
]

[tool.coverage.run]
source = ["transloadit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
ignore_errors = true
fail_under = 65
